samples/_failures_safe/1761332795_b70515_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1181ef5c.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_1181ef5c.c:168:36: error: expected ‘;’ at end of input
  168 |         case TOKEN_OPERATOR: printf
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_1181ef5c.c:168:9: error: expected declaration or statement at end of input
  168 |         case TOKEN_OPERATOR: printf
      |         ^~~~
./samples/SAFE/__tmp_1181ef5c.c:168:9: error: expected declaration or statement at end of input
